<resources>
    <string name="app_name">My Profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="fragment_detail">Detail</string>
    <string name="fragment_education">Education</string>
    <string name="fragment_exprience">Experience</string>
    <string name="fragment_skill">Skill</string>

    <string name="name">Karunyapas Dangruan</string>
    <string name="id_facebook">1212692799</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_website">Website</string>
    <string name="profile_email">Email</string>
    <string name="profile_birth_day">Birth Day</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_address">Address</string>

</resources>
